# SISE-Challenge-WebMining

./: .dockerignore  .env.example  .gitignore  Dockerfile  Présentation_orale.pptx  README.md  classe_pydantic_test.py  docker-compose.yml  gunicorn_conf.py  main.py  pyproject.toml  requirements.txt  run.py  test.py  wsgi.py
app/: __init__.py  ajax.py  bot_detector.py  config.py  routes.py
app/behavior_model/: __init__.py  _train_model_with_dummy_data.py  feature_builder.py  model_manager.py
app/exploration/: notebook.ipynb  supervised_model.ipynb
app/input_model/: __init__.py  feature_builder.py  model_manager.py
app/models/: product.py
app/schemas/: __init__.py  bot_analysis_answer_schema.py  bot_analysis_schema.py  event_behavior_schema.py  event_schema.py  feature_schema.py  mouse_behavior_schema.py  product_schema.py  user_session_schema.py
app/services/: __init__.py  behavior_service.py  data_connector.py  feature_service.py  plot_service.py  product_data.py  storage_service.py  training_service.py  user_service.py
app/static/css/: analytics.css  main.css
app/templates/: index.html
app/utility/: __init__.py  data_connector.py  feature_set_protocol.py  storage.py
data/: features.jsonl
data/models/: behavior_analysis_model.joblib  clusters_metadata.json  features_pca_fit.npy  isolation_forest.joblib  kmeans_final.joblib  labeled_data.npy  nom_du_model_a_foutre_ici.txt  pca_final.joblib  scaler_final.joblib  supervised_input_classifier.joblib
data/products/: products.json
schemas/: mouse_behavior_schema.py
scripts/: selenium_bot.py
(+19 files in other folders)
