[project]
name = "sise-challenge-webmining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "python-dotenv>=1.2.2",
    "hdbscan>=0.8.41",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]
