[project]
name = "sise-challenge-webmining"
version = "0.1.0"
description = "BingbingBang"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "python-dotenv>=1.2.2",
    "hdbscan>=0.8.41",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rapidfuzz>=3.14.3",
    "selenium>=4.41.0",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "plotly>=6.6.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
# Data generation: pip install -e ".[bots]"
bots = [
    "selenium>=4.0",
]
